styles.css
:root {
  --main-bg-color: #0e0e0e;
  --text-color: #ffffff;
  --palette-color-primary: #14518a;
  --main-border-color: var(--palette-color-primary);
  --button-hover-background: #14518a3f;
}

body {
  background-color: #000;
  color: var(--text-color);
  font-family: 'Garamond', 'Baskerville', 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
  margin: 0;
  padding: 0;
}

/* Main page layout (Mobile) */
.index-grid-container {
  display: grid;
  grid-template-rows: 68px auto auto 40px;
  grid-template-columns: repeat(5, 1fr);
  grid-column-gap: 0px;
  grid-row-gap: 0px;
  height: 100vh;
}

.index-nav-column {
  grid-area: 1 / 1 / 2 / 6;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  background-color: var(--main-bg-color);
  border-bottom: 2px solid var(--main-border-color);
}

.index-display-column {
  grid-area: 2 / 1 / 4 / 6;
  background-color: var(--main-bg-color);
  padding: 0 3px;
}

.index-footer {
  grid-area: 4 / 1 / 5 / 6;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 1.2em;
  border-top: 2px solid var(--main-border-color);
}

.index-footer a,
.index-footer a:hover {
  color: var(--text-color);
  text-decoration: none;
}

.index-footer img {
  max-width: 24px;
  margin-right: 5px;
}

/* Search box */
form.search-container {
  display: inline-flex;
  max-width: 160px;
  margin: 15px auto;
  background-color: #303030;
  border: 2px solid #fff;
  border-radius: 20px;
  padding: 5px;
  color: var(--text-color);
  font-size: 1.5em;
  position: relative;
}

input#facId {
  width: 60%;
  background-color: #303030;
  border: none;
  color: var(--text-color);
  text-transform: uppercase;
  position: relative;
  left: 8px;
  font-size: 18px;
  text-align: center;
  caret-color: transparent;
}

input#facId:focus,
input#facId::-moz-focus-inner {
  box-shadow: 0 1px orange;
}

#facId::placeholder {
  text-transform: none;
  font-size: 11px;
}

#facId:focus::placeholder {
  color: transparent;
}

/* Link Menu */
#page-links {
  margin-top: 0;
  width: 100%;
}

#page-links ul {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
  margin: 0;
  padding: 0;
  list-style-type: none;
}

#page-links ul li {
  font-size: 1.8em;
  text-align: center;
  line-height: normal;
  position: relative;
}

#page-links ul li a {
  display: block;
  text-decoration: none;
  color: var(--text-color);
}

#page-links ul li svg {
  font-size: inherit;
  position: relative;
  top: 4px;
}

#page-links .hide-text {
  display: none;
}

#search-box {
  display: flex;
  justify-content: center;
  width: 100%;
}

/* Front page content */
#front-page {
  margin-top: 50px;
  text-align: center;
}

/* Facility Details */
.fac-page-grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 4.5em repeat(4, 1fr);
  margin-top: 5px;
}

#facility-info header {
  grid-area: 1 / 1 / 2 / 3;
  display: flex;
  flex-direction: row;
  align-items: baseline;
  justify-content: space-between;
  padding: 0 2em;
}

#facility-info header h1 {
  margin: 0;
}

#facility-info .flex-col {
  display: flex;
  flex-direction: column;
}

#fac-information {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: left;
  background-color: #222222;
}

#fac-information .flex-row {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  margin: 5px;
}

.fac-information-item {
  display: flex;
  flex-direction: column;
  margin: 0 0.5em;
}

.align-flex-end {
  align-items: flex-end;
}

.align-flex-start {
  align-items: flex-start;
}

.flex-col p {
  margin: 0;
}

#facility-info main {
  grid-area: 2 / 1 / 6 / 3;
}

/* Facility Pay */
#fac-pay h2 {
  margin-left: 0.5em;
}

#payscale {
  width: 100%;
  text-align: center;
  border-collapse: collapse;
  font-size: 1.1em;
  padding: 5px;
}

#payscale td {
  padding: 6px;
  background-color: #222222;
  border: 1px solid #000;
}

.pay-header {
  background-color: rgba(20, 81, 138, 0.5);
  font-weight: bold;
  border-top: 2px solid var(--main-border-color);
  border-bottom: 2px solid var(--main-border-color);
}

.pay-header th {
  padding: 6px;
}

.flex-list {
  display: flex;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.flex-list li {
  margin-right: 0.5em;
  align-self: center;
}

.pay-factors {
  list-style-type: none;
  justify-content: space-between;
  background-color: #222222;
  padding: 4px 3px;
  border-bottom: 1px solid #000;
}

.pay-factors li:first-of-type {
  font-weight: bold;
  font-size: 1.1em;
  margin-right: 1em;
  margin-left: 8px;
}

.loc-area {
  font-weight: normal;
  font-size: 0.75em;
}

.cip {
  font-size: 0.5em;
}

/* Error Message Modal */
#modal {
  background-color: rgba(0, 50, 90, 0.7);
  border: 2px solid #fff;
  border-radius: 5px;
  width: 25%;
  margin-left: -12.5%;
  padding: 10px;
  position: absolute;
  top: -200px;
  left: 50%;
  color: var(--text-color);
  font-size: 1.3em;
  overflow: hidden;
}

#modal.fade-out {
  top: 20px;
  animation-name: fadeout;
  animation-duration: 2s;
  animation-delay: 2s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}

@keyframes fadeout {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
    top: -20px;
  }
}

/* Tables */
nav#table-select {
  width: 100%;
  text-align: center;
  display: flex;
  justify-content: space-evenly;
}

nav#table-select button {
  padding: 0.5rem 0;
  -moz-box-flex: 1;
  flex: 1 1 auto;
  font-size: 1.25rem;
  border: none;
  margin: 0 0.2rem;
  color: white;
  background-color: var(--main-bg-color);
}

nav#table-select button:hover {
  background-color: var(--button-hover-background);
}

nav#table-select button.active,
nav#table-select button:focus {
  box-shadow: 0 1px var(--palette-color-primary);
  outline: none;
}

nav#table-select button:focus {
  background-color: var(--button-hover-background);
}

/* MUI Datatable Overrides */
.MuiTable-root caption {
  display: none;
}

/* Tablets */
@media only screen and (min-width: 601px) {
  #search-box {
    width: 50%;
  }

  #page-links .hide-text {
    display: inline;
  }
}

/* Desktop */
@media only screen and (min-width: 992px) {
  .index-grid-container {
    grid-template-rows: auto auto auto 40px;
  }

  .index-nav-column {
    grid-area: 1 / 1 / 4 / 2;
    flex-direction: column;
    border-bottom: none;
  }

  .index-display-column {
    grid-area: 1 / 2 / 4 / 6;
  }

  #search-box {
    width: 100%;
  }

  #page-links {
    margin-top: 1em;
  }

  #page-links ul {
    flex-direction: column;
  }

  #page-links ul li {
    width: 100%;
    line-height: 2;
  }

  #page-links ul li:hover {
    text-shadow: 0px 0px 2px var(--palette-color-primary);
    box-shadow: 3px 0 orange;
    background-color: var(--button-hover-background);
  }

  #page-links ul li a:focus {
    outline: none;
    box-shadow: 3px 0 orange;
    background-color: var(--button-hover-background);
  }
  /* ovverride for MUI table */

  tr.MuiTableRow-root {
    display: table-row !important;
  }
}

/* Map Container */
#map-container iframe {
  width: 100%;
  border: none;
  margin: 0;
  padding: 0;
  height: calc(100vh - 108px);
  height: -webkit-fill-available;
}

/* media query for full screen */
@media only screen and (min-width: 992px) {
  #map-container iframe {
    height: calc(100vh - 40px);
    height: -webkit-fill-available;
  }
}

